--- a/RedditNav.safariextension/Info.plist
+++ b/RedditNav.safariextension/Info.plist
@@ -5,7 +5,7 @@
 	<key>Author</key>
 	<string>Devin Rousso</string>
 	<key>Builder Version</key>
-	<string>12604.1.6</string>
+	<string>12604.1.8.1.2</string>
 	<key>CFBundleDisplayName</key>
 	<string>RedditNav</string>
 	<key>CFBundleIdentifier</key>
@@ -56,8 +56,8 @@
 		</dict>
 	</dict>
 	<key>Update Manifest URL</key>
-	<string>http://devinrousso.com/projects/RedditNav-Safari/SafariUpdate.plist</string>
+	<string>https://devinrousso.com/projects/RedditNav-Safari/SafariUpdate.plist</string>
 	<key>Website</key>
-	<string>http://devinrousso.com</string>
+	<string>https://devinrousso.com</string>
 </dict>
 </plist>
